<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/background_login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <ImageView
            android:id="@+id/pf_user_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/edge_big"
            android:src="@drawable/user_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/pf_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/edge_big"
            android:text="@string/first_name"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:id="@+id/pf_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/last_name"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_normal" />

            <View
                android:id="@+id/view_above"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edge_mini"
                android:layout_marginTop="@dimen/edge_normal"
                android:alpha="0.5"
                android:background="@color/color_white" />

        <RelativeLayout
            android:id="@+id/rl_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/edge_big"
            android:alpha="0.5"
            android:background="@color/color_black"
            android:orientation="horizontal"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/ll_user_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/edge_normal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/t_usergender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_gender"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/fg_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nick_name"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/t_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birth"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/t_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/t_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_phone"
                    android:textColor="@color/color_white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_server_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_user_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/edge_normal"
                    android:text="@string/v_user_gender"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_user_nick_name"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_user_date_of_birth"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/tv_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_user_email"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v_user_phone"
                    android:textColor="@color/color_white" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:id="@+id/view_below"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edge_mini"
            android:layout_marginBottom="@dimen/edge_normal"
            android:alpha="0.5"
            android:background="@color/color_white" />

        <TextView
            android:id="@+id/t_visib_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vis_fr_map"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_normal" />

        <Spinner
            android:id="@+id/set_vis_friend_map"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edge_huge"
            android:layout_gravity="center"
            android:layout_margin="@dimen/edge_normal"
            android:entries="@array/visible_friends_list"
            android:gravity="center"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/btn_save_setting"
            android:layout_width="@dimen/btn_extra_large_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/edge_normal"
            android:layout_marginLeft="@dimen/edge_huge"
            android:layout_marginRight="@dimen/edge_huge"
            android:background="@drawable/bt_orange"
            android:text="@string/save_setting"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_mini" />
    </LinearLayout>

</FrameLayout>